--- a/app/package.json
+++ b/app/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@react-google-maps/api": "^2.20.7",
+    "decode-google-map-polyline": "^1.0.1",
     "next": "16.0.0",
     "react": "19.2.0",
     "react-dom": "19.2.0"
